--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
@@ -35,32 +37,78 @@
       'Berne, Eric', 'Berra, Yogi', 'Berry, Wendell', 'Bevan, Aneurin', 'Ben-Gurion, David', 'Bevel, Ken', 'Biden, Joseph', 'Bennington, Chester', 'Bierce, Ambrose',
       'Billings, Josh', 'Birrell, Augustine', 'Blair, Tony', 'Beecher, Henry', 'Biondo, Frank'
     ];
-    
+
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+
+    // inventorsFiltered = inventors.filter((inventor) => inventor.year >= 1500 & inventor.year < 1600);
+    // console.table(inventorsFiltered);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
 
+    // namesList = inventors.map((inventor) => `${inventor.first} ${inventor.last}`);
+    // console.log(namesList);
+
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+
+    // sortedInventors = inventors.sort((a, b) => (a.year > b.year) ? 1 : -1);
+    // console.table(sortedInventors);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
 
+    // sumOfYears = inventors.reduce((total, inventor) => {
+    //   return total + (inventor.passed - inventor.year);
+    // }, 0);
+    // console.log(sumOfYears);
+
     // 5. Sort the inventors by years lived
+
+    // oldest = inventors.sort((a,b) => {
+    //   aAge = a.passed - a.year;
+    //   bAge = b.passed - b.year;
+
+    //   return (aAge > bAge) ? -1 : 1;
+    // });
+    // console.table(oldest);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+
+    // links = Array.from(document.querySelectorAll('.mw-category a'));
+    // de = links
+    //        .map(streetName => streetName.textContent)
+    //        .filter(streetName => streetName.includes('de'));
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
+    // sorted = people.sort((a, b) => {
+    //   [aSurName, aName] = a.split(', ');
+    //   [bSurName, bName] = b.split(', ');
+
+    //   return (aSurName > bSurName) ? 1 : -1;
+    // });
+
+    // console.log(sorted);
+
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
+
+    sums = data.reduce((obj, item) => {
+      if (!obj[item]) {
+        obj[item] = 0;
+      } obj[item]++;
+      return obj;
+    }, {});
+
+    console.log(sums);
 
   </script>
 </body>
+
 </html>
